bat.bool1.sumdouble.SumDouble.scala.error
Compilation error:
SumDouble:4: error: reassignment to val
    a=3*a
     ^